# wrap

./: .codespellrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml  devenv.nix  example.next.yml  flake.nix  justfile  rustfmt.toml  wrap.next.yaml  wrap.yaml
.github/workflows/: build.yaml  build.yaml.old  update-flake-lock.yaml
config/: example.next.yml  wrap.next.yaml  wrap.yaml
hooks/: pre-commit
src/: config.rs  main.rs
src/shell/: fish.rs  mod.rs
src/wrap/: alias.rs  command.rs  config.rs  default_argument.rs  keyword.rs  mod.rs  variable.pest  variable.rs
src/wrapper/: alias.rs  command.rs  mod.rs  trigger.rs  wrapper.rs
