[package]
name = "wrap"
version = "0.2.5"
authors = ["David Orchard <if_coding@fastmail.com>"]
edition = "2018"

[dependencies]
# Command line arguments/config
paw = "1"
structopt = { version = "0.3", features = ["paw"] }

# Config
# TODO: use a version again once it's published
config = { git = "https://github.com/mehcode/config-rs", rev = "052c9503c65ee66074d00e8885aa13e6831bf079", features = ["toml", "json", "yaml", "hjson", "ini", "ron", "json5", "preserve_order"] }
dirs = "4.0.0"
serde_derive = "1.0.126"
serde = "1.0.126"

# Logging/debugging
color-backtrace = "0.5"
log = "0.4"
pretty_env_logger = "0.4"

# Error handling
anyhow = "1"

# Logic
exec = "0.3.1"
pest = "2.0"
pest_derive = "2.0"
indexmap = { version = "1.7.0", features = ["serde-1"] }
shell-escape = "0.1.5"

[dev-dependencies]
serde_yaml = "0.8.21"
