[package]
name = "wrap"
version = "0.4.0"
authors = ["David Orchard <if_coding@fastmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
# Command line arguments
clap = { version = "4", features = [
    "color",
    "derive",
    "suggestions",
    "wrap_help",
] }

# Config
# TODO: use a version again once it's published
config = "0.14.0"
dirs = "5"
serde_derive = "1"
serde = "1"

# Logging/debugging
color-backtrace = "0.6"
log = "0.4"
pretty_env_logger = "0.5"

# Error handling
anyhow = "1"

# Logic
exec = "0.3"
pest = "2"
pest_derive = "2"
indexmap = { version = "2", features = ["serde"] }
shell-escape = "0.1"

[dev-dependencies]
serde_yaml = "0.9"

[patch.crates-io]
# Fix security advisory
# Remove after https://github.com/mehcode/config-rs/issues/563
config = { git = "https://github.com/mehcode/config-rs" }
# yaml-rust = { version = "0.8", package = "yaml-rust2" }
